# Learning

./: .env  .env.example  pyproject.toml
app/: settings.py  urls.py
core/: models.py  urls.py  views.py
frontend/: nuxt.config.js  package-lock.json  package.json
